--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </select>
                 </div>
                 <button onclick="calculateResistance()">Calculate</button>
-                <div id="resistor-code-result"></div>
+                <p id="resistor-code-result"></p>
             </section>
 
             <!-- Inductor Energy Calculator -->
